# PVS-Projekt

./: .gitignore  CMakeLists.txt  README.md  compile_and_run.sh  kernel_source.cl  template_matching.cpp  template_matching_cl.cpp  template_matching_fast.cpp  template_matching_mp.cpp  template_matching_mpV2.cpp  template_matching_mp_fast.cpp  template_matching_mpi.cpp  template_matching_mpi_fast.cpp  template_matching_mpi_old.cpp
